--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <div class="title"> <span>Login Form</span></div>
     <form action="#">
       <div class="row">
-        <input type="text" id="name" placeholder="Username">
+        <input type="text" id="name" placeholder="Username" onkeyup="nameValidation()">
       </div>
       <div class="usernameError">
         <p>Username must be 6 character</p>
       </div>
       <div class="row">
-        <input type="text" id="email" placeholder="Email">
+        <input type="text" id="email" placeholder="Email" onkeyup="emailValidation()">
       </div>
       <div class="emailError">
         <p>Invalid email address</p>
       </div>
       <div class="row">
-        <input type="password" id="pass" placeholder="Password">
+        <input type="password" id="pass" placeholder="Password" onkeyup="passwordValidation()">
       </div>
       <div class="passwordError">
         <p>Password cann't be same as user name</p>
@@ -33,8 +33,17 @@
       <div class="passwordError1">
         <p>Password must be at least 6 character</p>
       </div>
+      <div class="passwordError2">
+        <p>Password required</p>
+      </div>
+      <div class="row">
+        <input type="password" id="confirm-pass" placeholder="Confirm Password" onkeyup="confirmPassValidation()">
+      </div>
+      <div class="confirmPasswordError">
+        <p>Must match password</p>
+      </div>
       <div class="row button">
-        <input type="submit" onclick="Validation()" value="Login">
+        <input type="submit" onclick="" value="Login">
       </div>
        
     </form>
