--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="wrapper">
-    <div class="title"> <span>Login Form</span></div>
+    <div class="title"> <span>Sign Up Form</span></div>
     <form action="#">
       <div class="row">
         <input type="text" id="name" placeholder="Username" onkeyup="nameValidation()">
@@ -42,8 +42,16 @@
       <div class="confirmPasswordError">
         <p>Must match password</p>
       </div>
+      <div class="card">
+        <img src="images/profile.png" id="profile-pic">
+        <div class="imageSizeError">
+          <p>Image size must be less than 50 KB</p>
+        </div>
+        <label for="input-file" onclick="updateImage()">Update Image</label>
+        <input type="file" accept="image/jpeg, image/png, image/jpg" id="input-file">
+      </div>
       <div class="row button">
-        <input type="submit" onclick="" value="Login">
+        <input type="submit" onclick="" value="Sign Up">
       </div>
        
     </form>
